# ignite-v2-client

./: Cargo.toml  LICENSE  README.md
docs/: partition-awareness-plan.md
local-cluster/: ignite-config.xml  start.sh  stop.sh
src/: affinity.rs  cache.rs  channel.rs  client.rs  discovery.rs  error.rs  lib.rs  pool.rs  query.rs  stream.rs  transaction.rs
src/protocol/: codec.rs  error.rs  handshake.rs  messages.rs  mod.rs  types.rs
src/transport/: connection.rs  error.rs  mod.rs  tls.rs
tests/: expiry.rs  functional_cache.rs  functional_query.rs  metadata.rs  partition_awareness.rs  smoke.rs  transaction.rs
