[package]
name = "ignite-v2-client"
version = "0.1.2"
edition = "2024"
description = "Apache Ignite v2 Client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnSColeman/ignite-v2-client.git"
homepage = "https://github.com/JohnSColeman/ignite-v2-client.git"
readme = "README.md"
keywords = ["ignite", "client"]
categories = ["database"]
exclude = ["tests/*", "examples/*", "target", "Cargo.lock"]
authors = ["John Coleman <qbyteconsulting@gmail.com>"]

[lib]
name = "ignite_client"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
deadpool = { workspace = true }
async-trait = { workspace = true }
num-bigint = { workspace = true }
bigdecimal = { workspace = true }
uuid = { workspace = true }
socket2 = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-native-certs = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
futures = { workspace = true }

[lints]
workspace = true

[workspace]
resolver = "2"

[workspace.dependencies]
tokio = { version = "=1.50.0", features = ["full"] }
tokio-util = { version = "=0.7.18", features = ["codec"] }
bytes = "=1.11.1"
thiserror = "=2.0.18"
tracing = "=0.1.44"
futures = "=0.3.32"
bigdecimal = { version = "=0.4.10", features = ["serde"] }
uuid = { version = "=1.21.0", features = ["v4"] }
deadpool = { version = "=0.13.0", features = ["managed", "rt_tokio_1"] }
async-trait = "=0.1.89"
num-bigint = "=0.4.6"
socket2 = "=0.6.2"
rustls = { version = "=0.23.37", features = ["ring"] }
tokio-rustls = "=0.26.4"
rustls-native-certs = "=0.8.3"

[workspace.lints.rust]
unused_imports    = "warn"
dead_code         = "warn"
unused_variables  = "warn"

[workspace.lints.clippy]
unwrap_used       = "warn"
expect_used       = "warn"
